<resources>
    <string name="app_name">Practicum-Android-Diploma</string>

    <!-- Bottom navigation -->
    <string name="bottom_nav_home">Главная</string>
    <string name="bottom_nav_favorites">Избранное</string>
    <string name="bottom_nav_team">Команда</string>

    <!-- Fragment "Поиск" -->
    <string name="search_vacancies">Поиск вакансий</string>
    <string name="search_hint">Введите запрос</string>
    <string name="no_internet">Нет интернета</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="failed_to_load_vacancies">Не удалось получить\n список вакансий</string>
    <string name="no_vacancies_found">Таких вакансий нет</string>
    <string name="vacancies_found">Найдено</string>
    <string name="vacancies">вакансий</string>
    <string name="vacancies_n_found">Найдено %1$d вакансий</string>

    <!-- Fragment "Настройки фильтрации" -->
    <string name="filter_settings">Настройки фильтрации</string>
    <string name="work_place">Место работы</string>
    <string name="industry">Отрасль</string>
    <string name="expected_salary">Ожидаемая зарплата</string>
    <string name="enter_amount">Введите сумму</string>
    <string name="hide_without_salary">Не показывать без зарплаты</string>

    <!-- Fragment "Выбор места работы" -->
    <string name="select_work_place">Выбор места работы</string>
    <string name="country">Страна</string>
    <string name="region">Регион</string>

    <!-- Fragment "Выбор страны" -->
    <string name="country_selection">Выбор страны</string>
    <string name="back_btn">Кнопка назад</string>
    <string name="choose_country_btn">Кнопка выбора страны</string>
    <string name="other_regions">Другие регионы</string>

    <!-- Fragment "Выбор региона" -->
    <string name="select_region">Выбор региона</string>
    <string name="enter_region">Введите регион</string>
    <string name="region_not_found">Такого региона нет</string>
    <string name="failed_to_load_regions">Не удалось получить\n список</string>

    <!-- Fragment "Выбор отрасли" -->
    <string name="select_industry">Выбор отрасли</string>
    <string name="enter_industry">Введите отрасль</string>

    <!-- Button text -->
    <string name="button_select">Выбрать</string>
    <string name="button_apply">Применить</string>
    <string name="button_reset">Сбросить</string>

    <!-- Fragment "Вакансия" -->
    <string name="vacancy">Вакансия</string>
    <string name="required_experience">Требуемый опыт</string>
    <string name="vacancy_description">Описание вакансии</string>
    <string name="responsibilities">Обязанности</string>
    <string name="requirements">Требования</string>
    <string name="conditions">Условия</string>
    <string name="key_skills">Ключевые навыки</string>
    <string name="vacancy_not_found">Вакансия не найдена или\nудалена</string>
    <string name="contacts">Контакты</string>
    <string name="salary_not_specified">Зарплата не указана</string>

    <!-- Fragment "Избранное" -->
    <string name="favorites">Избранное</string>
    <string name="empty_list">Список пуст</string>
    <string name="unsuccessful_query">Не удалось получить список вакансий</string>

    <!-- Fragment "Команда" -->
    <string name="team">Команда</string>
    <string name="team_title">Над приложением работали</string>
    <string name="first_dev">Артем Кашицын</string>
    <string name="second_dev">Сергей Обрывко</string>
    <string name="third_dev">Павел Бородин</string>
    <string name="forth_dev">Иван Юрченко</string>

    <!-- Item вакансии -->
    <string name="name_and_region">Название вакансии, Регион</string>
    <string name="employer">Работодатель</string>
    <string name="salary">от 000 до 000 Р</string>

    <!-- Валюты -->
    <string name="rub">₽</string>
    <string name="byr">Br</string>
    <string name="usd">$</string>
    <string name="eur">€</string>
    <string name="kzt">₸</string>
    <string name="uah">₴</string>
    <string name="azn">₼</string>
    <string name="uzs">So’m</string>
    <string name="gel">₾</string>
    <string name="kgt">с</string>
    <string name="sek">kr</string>
    <string name="gbp">£</string>
    <string name="nzd">NZ$</string>
    <string name="sgd">S$</string>
    <string name="aud">A$</string>
    <string name="hkd">HK$</string>

    <!-- Диапазон зарплаты -->
    <string name="salary_null">Зарплата не указана</string>
    <string name="salary_from">от %1$s</string>
    <string name="salary_to">до %1$s</string>
    <string name="salary_from_to">от %1$s до %2$s</string>

    <!-- ViewHolder вакансии -->
    <string name="employer_null">Работодатель не указан</string>

    <!-- ViewHolder поиска -->
    <string name="message_no_internet">Проверьте подключение к интернету</string>
    <string name="message_server_error">Произошла ошибка</string>
</resources>
