<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/padding_16"
    android:paddingVertical="9dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/poster_img"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:scaleType="center"
        android:src="@drawable/ic_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/roundedImageView"
        app:strokeColor="@color/light_gray"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/ys_display_medium"
        android:maxLines="2"
        android:text="@string/name_and_region"
        android:textColor="?attr/colorOnBackgroundPrimary"
        android:textSize="@dimen/text_size_22"
        app:layout_constraintStart_toEndOf="@id/poster_img"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/employer_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_regular"
        android:maxLines="1"
        android:text="@string/employer"
        android:textColor="?attr/colorOnBackgroundPrimary"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintStart_toStartOf="@id/name_tv"
        app:layout_constraintTop_toBottomOf="@id/name_tv" />

    <TextView
        android:id="@+id/salary_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_regular"
        android:maxLines="1"
        android:text="@string/salary"
        android:textColor="?attr/colorOnBackgroundPrimary"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintStart_toStartOf="@id/employer_tv"
        app:layout_constraintTop_toBottomOf="@id/employer_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>
