<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.filter.ui.FilterIndustryFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/industryHeader"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:cardBackgroundColor="?attr/colorBackgroundPrimary"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="0dp"
                android:layout_height="22dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/select_industry"
                android:textColor="?attr/colorOnBackgroundPrimary"
                android:textSize="@dimen/text_size_22"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/backButton"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/filter_settings"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="?attr/colorOnBackgroundPrimary" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/searchContainer"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/industryHeader">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorBackgroundPrimary">

            <EditText
                android:id="@+id/searchInput"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:autofillHints="none"
                android:background="@drawable/rounded_edittext"
                android:fontFamily="@font/ys_display_regular"
                android:hint="@string/enter_industry"
                android:textCursorDrawable="@drawable/custom_cursor"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="16dp"
                android:textColor="@color/black"
                android:textColorHint="?attr/colorHintTextField"
                android:textSize="@dimen/text_size_16"
                android:paddingEnd="60dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/searchClearIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/search_vacancies"
                android:src="@drawable/ic_search"
                app:layout_constraintBottom_toBottomOf="@id/searchInput"
                app:layout_constraintEnd_toEndOf="@id/searchInput"
                app:layout_constraintTop_toTopOf="@id/searchInput"
                app:tint="@color/black" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/placeholderImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:importantForAccessibility="no"
        android:visibility="invisible"
        android:src="@drawable/img_request_unsuccessful_magic_carpet"
        app:layout_constraintTop_toBottomOf="@id/searchContainer"
        app:layout_constraintBottom_toTopOf="@id/placeholderText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/placeholderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/ys_display_medium"
        android:maxLines="2"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_22"
        android:text="@string/failed_to_load_regions"
        android:visibility="invisible"
        android:textColor="?attr/colorOnBackgroundPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/placeholderImage" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/industryRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchContainer" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/select_button"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bg_button_select"
        android:fontFamily="@font/ys_display_medium"
        android:stateListAnimator="@null"
        android:text="@string/button_select"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
