<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.filter.ui.FilterLocationFragment">

    <ImageButton
        android:id="@+id/back"
        style="@style/HeaderImageButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_8"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorOnBackgroundPrimary" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_8"
        android:layout_marginTop="19dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/select_work_place"
        android:textColor="?attr/colorOnBackgroundPrimary"
        android:textSize="@dimen/text_size_22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/back"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/country_text_layout"
        style="@style/RemovableFilterTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:hint="@string/country"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/country_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/RemovableFilterTextInputStyle"
            tools:text="Страна" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/country_action"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/HeaderImageButtonStyle"
        android:layout_marginVertical="0dp"
        android:src="@drawable/ic_arrow_forward"
        app:layout_constraintBottom_toBottomOf="@id/country_text_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/country_text_layout"
        app:layout_constraintTop_toTopOf="@id/country_text_layout"
        app:tint="?attr/colorOnBackgroundPrimary" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/region_text_layout"
        style="@style/RemovableFilterTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/region"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/country_text_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/region_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/RemovableFilterTextInputStyle"
            tools:text="Регион" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/region_action"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/HeaderImageButtonStyle"
        android:layout_marginVertical="0dp"
        android:src="@drawable/ic_arrow_forward"
        app:layout_constraintBottom_toBottomOf="@id/region_text_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/region_text_layout"
        app:layout_constraintTop_toTopOf="@id/region_text_layout"
        app:tint="?attr/colorOnBackgroundPrimary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/select_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_text"
        android:textAllCaps="false"
        android:letterSpacing="0"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/button_select"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:layout_marginBottom="@dimen/padding_24"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:paddingVertical="20dp"
        android:textSize="@dimen/text_size_16"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
